--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body{
     background-color:powderblue ;
+    min-height: 400px;
+    margin-bottom: 100px;
 }
 .tulife{
     max-width: 100%;
@@ -13,7 +15,11 @@ h1{
 h2{
     color:blue; font-family: Verdana;
 }
-
+footer{
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
 a:link{
     text-decoration: none;
     color:aliceblue;
